feat(license): add LICENSE

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -42,8 +42,10 @@ header:
     - 'LICENSE'
     - 'NOTICE'
     - 'VERSION'
-    - 'LICENSE.tpl'
+    - '.license.tpl'
     - 'mvnw'
+    - '**/*.marker'
+    - '**/*.lst'
 
   language:
     Dockerfile:
@@ -57,381 +59,3 @@ header:
 dependency:
   files:
     - pom.xml
-  licenses:
-    - name: com.fasterxml.jackson.dataformat:jackson-dataformat-yaml 
-      license: Apache-2.0
-      version: 2.12.5
-    - name: com.fasterxml.jackson.datatype:jackson-datatype-jsr310 
-      license: Apache-2.0
-      version: 2.12.5
-    - name: com.fasterxml.jackson.jaxrs:jackson-jaxrs-base 
-      license: Apache-2.0
-      version: 2.12.5
-    - name: com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider 
-      license: Apache-2.0
-      version: 2.12.5
-    - name: com.fasterxml.jackson.module:jackson-module-jaxb-annotations 
-      license: Apache-2.0
-      version: 2.12.5
-    - name: com.github.docker-java:docker-java-api 
-      license: Apache-2.0
-      version: 3.2.12
-    - name: com.github.docker-java:docker-java-transport 
-      license: Apache-2.0
-      version: 3.2.12
-    - name: com.google.code.gson:gson 
-      license: Apache-2.0
-      version: 2.8.6
-    - name: com.google.guava:listenablefuture 
-      license: Apache-2.0 | 9999.0-empty-to-avoid-conflict-with-guava
-    - name: com.google.inject:guice 
-      license: Apache-2.0
-      version: 4.2.1
-    - name: com.squareup.okhttp3:okhttp 
-      license: Apache-2.0
-      version: 3.14.9
-    - name: com.squareup.okio:okio 
-      license: Apache-2.0
-      version: 1.17.2
-    - name: io.quarkus.arc:arc 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-agroal 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-apache-httpclient 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-arc 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-bootstrap-app-model 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-bootstrap-core 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-bootstrap-gradle-resolver 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-bootstrap-maven-resolver 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-bootstrap-runner 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-builder 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-caffeine 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-class-change-agent 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-config-yaml 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-core 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-core-deployment 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-credentials 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-datasource 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-datasource-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-development-mode-spi 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-devtools-utilities 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-flyway 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-hibernate-orm 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-hibernate-orm-panache 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-hibernate-orm-panache-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-hibernate-validator 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-ide-launcher 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jackson 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jaxb 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jaxp 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jdbc-h2 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jdbc-mysql 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jsonp 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-jsonp-deployment 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-mutiny 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-narayana-jta 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-netty 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-oidc 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-oidc-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-panache-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-panache-hibernate-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-redis-client 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-rest-client 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-rest-client-config 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-rest-client-jackson 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-resteasy 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-resteasy-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-resteasy-jackson 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-resteasy-jaxb 
-      license: Apache-2.0
-      version: 1.7.0.Final
-    - name: io.quarkus:quarkus-resteasy-server-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-security 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-security-runtime-spi 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-smallrye-context-propagation 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-smallrye-jwt-build 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-smallrye-openapi 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-swagger-ui 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-test-common 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-test-keycloak-server 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-vertx 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-vertx-http 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-vertx-http-dev-console-runtime-spi 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-websockets 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-websockets-client 
-      license: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.smallrye.common:smallrye-common-annotation 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.common:smallrye-common-classloader 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.common:smallrye-common-constraint 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.common:smallrye-common-expression 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.common:smallrye-common-function 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.common:smallrye-common-io 
-      license: Apache-2.0
-      version: 1.6.0
-    - name: io.smallrye.config:smallrye-config-common 
-      license: Apache-2.0
-      version: 2.5.1
-    - name: io.smallrye.config:smallrye-config-source-yaml 
-      license: Apache-2.0
-      version: 2.5.1
-    - name: io.smallrye.reactive:mutiny 
-      license: Apache-2.0
-      version: 1.1.2
-    - name: io.smallrye.reactive:mutiny-smallrye-context-propagation 
-      license: Apache-2.0
-      version: 1.1.2
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-auth-common 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-bridge-common 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-core 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-redis-client 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-runtime 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-web 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-web-client 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-mutiny-vertx-web-common 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye.reactive:smallrye-reactive-converter-api 
-      license: Apache-2.0
-      version: 2.6.0
-    - name: io.smallrye.reactive:smallrye-reactive-converter-mutiny 
-      license: Apache-2.0
-      version: 2.6.0
-    - name: io.smallrye.reactive:vertx-mutiny-generator 
-      license: Apache-2.0
-      version: 2.14.1
-    - name: io.smallrye:smallrye-context-propagation 
-      license: Apache-2.0
-      version: 1.2.2
-    - name: io.smallrye:smallrye-context-propagation-api 
-      license: Apache-2.0
-      version: 1.2.2
-    - name: io.smallrye:smallrye-context-propagation-jta 
-      license: Apache-2.0
-      version: 1.2.2
-    - name: io.smallrye:smallrye-context-propagation-storage 
-      license: Apache-2.0
-      version: 1.2.2
-    - name: io.smallrye:smallrye-open-api-core 
-      license: Apache-2.0
-      version: 2.1.15
-    - name: io.vertx:vertx-auth-common 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: io.vertx:vertx-bridge-common 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: io.vertx:vertx-codegen 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: io.vertx:vertx-redis-client 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: io.vertx:vertx-web-client 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: io.vertx:vertx-web-common 
-      license: Apache-2.0
-      version: 4.1.5
-    - name: net.bytebuddy:byte-buddy 
-      license: Apache-2.0
-      version: 1.11.20
-    - name: org.codehaus.plexus:plexus-component-annotations 
-      license: Apache-2.0
-      version: 2.1.0
-    - name: org.jboss.narayana.jta:narayana-jta 
-      license: Apache-2.0
-      version: 5.12.0.Final
-    - name: org.jboss.narayana.jts:narayana-jts-integration 
-      license: Apache-2.0
-      version: 5.12.0.Final
-    - name: org.jboss.resteasy:resteasy-cdi 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-client 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-client-api 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-client-microprofile 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-client-microprofile-base 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-core 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-core-spi 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-jackson2-provider 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-jaxb-provider 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss.resteasy:resteasy-multipart-provider 
-      license: Apache-2.0
-      version: 4.7.3.Final
-    - name: org.jboss:jboss-transaction-spi 
-      license: Apache-2.0
-      version: 7.6.0.Final
-    - name: org.slf4j:slf4j-api 
-      license: Apache-2.0
-      version: 1.7.30
-    - name: org.sonatype.plexus:plexus-cipher 
-      license: Apache-2.0
-      version: 1.4
-    - name: org.sonatype.plexus:plexus-sec-dispatcher 
-      license: Apache-2.0
-      version: 1.4
-    - name: io.quarkus:quarkus-resteasy-jaxb
-      livense: Apache-2.0
-      version: 2.4.2.Final
-    - name: io.quarkus:quarkus-scheduler
-      livense: Apache-2.0
-      version: 2.4.2.Final
