fix(swr): update buildx provenance to false

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -172,6 +172,7 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         file: Dockerfile
+        provenance: false
 
     - name: Extract Docker metadata
       id: meta-opensource
